demo/multiple-webhooks/base/Services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "swissarmyknife-svc"
  namespace: "swissarmyknife"
  labels:
    app.kubernetes.io/name: "swissarmyknife"
    app: "swissarmyknife"
    backstage.io/kubernetes-id: "swissarmyknife"
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 12000
  selector:
    eventsource-name: swissarmyknife-es
    controller: eventsource-controller
---
apiVersion: v1
kind: Service
metadata:
  name: "swissarmyknife-kustomize"
  namespace: "swissarmyknife"
  labels:
    app.kubernetes.io/name: "swissarmyknife"
    app: "swissarmyknife-kustomize"
    backstage.io/kubernetes-id: "swissarmyknife"
spec:
  type: ClusterIP
  #type: NodePort
  ports:
  - port: 80
    targetPort: 13000
  selector:
    eventsource-name: swissarmyknife-es
    controller: eventsource-controller
